--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -71,7 +71,12 @@
 <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <style>
+            .custom-bg-color {
+                background-color: #1e3d73;
+            }
+        </style>
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="/dashboard">
@@ -162,18 +167,13 @@
             <a class="nav-link" routerLink="/profile">
                 <i class="fas fa-fw fa-user"></i>
                 <span>Profile</span>
+
             </a>
         </li>
 
 
 
-        <!-- Divider -->
-        <hr class="sidebar-divider d-none d-md-block">
 
-        <!-- Sidebar Toggler (Sidebar) -->
-        <div class="text-center d-none d-md-inline">
-            <button class="rounded-circle border-0" id="sidebarToggle"></button>
-        </div>
 
 
 
@@ -219,9 +219,8 @@
                     </li>
 
 
-
-
-
+                    <script>const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+                        const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))</script>
 
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -230,20 +229,25 @@
                             <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{username}}</span>
                             <img class="img-profile rounded-circle" src="assets/admin/img/undraw_profile.svg">
                         </a>
-                        <!-- Dropdown - User Information -->
+                        <!-- Dropdown - User Information  -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                             aria-labelledby="userDropdown">
                             <a class="dropdown-item" routerLink="/profile">
-                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Profile
+                                <i class="fas fa-user fa-sm fa-fw mr-2 text-white-400"></i>
+                                <span>Profile</span>
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" (click)="logout()" data-toggle="modal" data-target="#logoutModal">
-                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                            <button class="dropdown-item" (click)="logout()" data-toggle="modal"
+                                data-target="#logoutModal">
+                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-white-400"></i>
                                 Logout
-                            </a>
+                            </button>
                         </div>
                     </li>
+
+
+
+
 
 
 
@@ -284,28 +288,3 @@
 
 </div>
 <!-- End of Page Wrapper -->
-
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-</a>
-
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">Selectionner "Logout" pour quitter la session.</div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" type='submit'>Logout</a>
-            </div>
-        </div>
-    </div>
-</div>
