--- a/src/app/layouts/auth-admin-layout/auth-admin-layout.component.html
+++ b/src/app/layouts/auth-admin-layout/auth-admin-layout.component.html
@@ -1,15 +1,14 @@
-<div class="container">
+<!-- <div class="container">
 
-    <!-- Outer Row -->
     <div class="row justify-content-center">
 
         <div class="col-xl-10 col-lg-12 col-md-9">
 
             <div class="card o-hidden border-0 shadow-lg my-5">
                 <div class="card-body p-0">
-                    <!-- Nested Row within Card Body -->
                     <div class="row">
-                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+
+
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
@@ -46,4 +45,91 @@
 
     </div>
 
-</div>
+</div> -->
+
+
+
+
+<style>
+    body {
+        background-color: #b5ece5;
+        /* Semi-transparent background color */
+        backdrop-filter: blur(40px);
+        /* Add a blur effect (adjust the value as needed) */
+        opacity: 0.8;
+        /* Adjust the opacity as desired */
+    }
+
+    .container {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card {
+        border-radius: 34px;
+
+        width: 100%;
+        max-width: 400px;
+        margin-right: 200;
+
+    }
+
+
+    .form-control {
+        background-color: rgba(225, 231, 250, 0.8);
+        /* White input fields with transparency */
+        color: #000;
+        /* Black text */
+    }
+
+    .btn-primary {
+        background-color: #84eced;
+        /* Dodger Blue button */
+        color: #fff;
+        /* White text */
+    }
+
+    .btn-primary:hover {
+        background-color: #84eced;
+        /* Navy Blue hover */
+    }
+</style>
+
+<body>
+    <div class="container">
+        <div class="card o-hidden border-0 shadow-lg">
+            <div class="card-body p-0 bg-gradient-info">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="p-5">
+                            <div class="text-center">
+                                <h1 class="h4 text-white mb-4">Bienvenue à I.J CAR Group Admin Dashboard</h1>
+                            </div>
+                            <form class="user" #f="ngForm" (ngSubmit)="login(f)">
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                        aria-describedby="emailHelp" placeholder="Entrer votre Email..." name="email"
+                                        #email="ngModel" ngModel>
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control form-control-user"
+                                        id="exampleInputPassword" placeholder="Password..." name="password"
+                                        #password="ngModel" ngModel>
+                                </div>
+                                <div class="alert alert-danger" *ngIf="messageErr">
+                                    {{messageErr}}
+                                </div>
+                                <button type="submit" class="btn btn-primary btn-user btn-block">
+                                    Login
+                                </button>
+                                <hr>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
