--- a/src/app/views/components/adduser/adduser.component.html
+++ b/src/app/views/components/adduser/adduser.component.html
@@ -10,10 +10,10 @@
                         #fullname="ngModel" minlength="2" maxlength="20" ngModel>
                 </div>
                 <div class="alert alert-danger" *ngIf="fullname.errors?.['required'] && fullname.touched">
-                    fullname is required
+                    Champ Nom complet est requis
                 </div>
                 <div class="alert alert-danger" *ngIf="fullname.errors?.['minlength'] && fullname.touched">
-                    fullname must be minimum 1 or 2 or 3 or 4
+                    Champ Nom complet contient au minimum 3 lettres
                 </div>
                 <!-- agnecy_id validation end here -->
 
@@ -24,11 +24,9 @@
                         minlength="2" maxlength="20" ngModel>
                 </div>
                 <div class="alert alert-danger" *ngIf="email.errors?.['required'] && email.touched">
-                    email is required
+                    Champ email est requis
                 </div>
-                <div class="alert alert-danger" *ngIf="email.errors?.['minlength'] && email.touched">
-                    email must be minimum 2 caractere
-                </div>
+
                 <!-- model validation end here -->
 
 
@@ -50,7 +48,7 @@
             <div class="col-md-6">
                 <!-- color validation start here -->
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">agence</label>
+                    <label for="exampleFormControlInput1">Agence Id</label>
                     <select class="form-control" required name="agency" #agency="ngModel" ngModel>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -59,10 +57,10 @@
                     </select>
                 </div>
                 <div class="alert alert-danger" *ngIf="agency.errors?.['required'] && agency.touched">
-                    agence is required
+                    Champ agence est requis
                 </div>
                 <div class="alert alert-danger" *ngIf="agency.errors?.['minlength'] && agency.touched">
-                    agence must be minimum 1 or 2 or 3 or 4
+                    Champ agence contient au minimum 3 lettres
                 </div>
 
                 <div class="form-group">
@@ -71,7 +69,7 @@
                         #password="ngModel" ngModel>
                 </div>
                 <div class="alert alert-danger" *ngIf="password.errors?.['required'] && password.touched">
-                    password is required
+                    Champ password est requis
                 </div>
                 <!-- color validation end here -->
                 <!-- puissance validation end here -->
