--- a/src/app/views/components/my-cars/my-cars.component.html
+++ b/src/app/views/components/my-cars/my-cars.component.html
@@ -1,5 +1,5 @@
 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-    <h6 class="m-0 font-weight-bold text-primary">Voitures</h6>
+    <h6 class="m-0 font-weight-bold text-primary">Mes Voitures</h6>
     <div class="dropdown no-arrow">
         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -23,7 +23,6 @@
         <thead>
             <tr>
                 <th class="header-cell">Id</th>
-                <th class="header-cell">agence</th>
                 <th class="header-cell">model</th>
                 <th class="header-cell">disponibilité</th>
                 <th class="header-cell">puissance</th>
@@ -53,10 +52,7 @@
         <tbody>
             <tr *ngFor="let car of cars; let i = index" class="table-row">
                 <td>
-                    <span class="badge py-2 px-3 fs-7 badge-light-primary ">{{car.car_id}}</span>
-                </td>
-                <td>
-                    <span class="badge py-2 px-3 fs-7 badge-light-primary ">{{car.agency_id}}</span>
+                    <span class="badge py-2 px-3 fs-7 badge-light-primary ">#{{car.car_id}}</span>
                 </td>
                 <td>
                     <span class="badge py-2 px-3 fs-7 badge-light-primary ">{{car.model}}</span>
