--- a/src/app/views/components/nbr-agencies/nbr-agencies.component.html
+++ b/src/app/views/components/nbr-agencies/nbr-agencies.component.html
@@ -2,11 +2,12 @@
     <div class="row no-gutters align-items-center">
         <div class="col mr-2">
             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                Nombre Agences</div>
+                Nombre Agences
+            </div>
             <div class="h5 mb-0 font-weight-bold text-gray-800">{{nbr}}</div>
         </div>
         <div class="col-auto">
-            <i class="fas fa-car fa-2x text-gray-300"></i>
+            <i class="fas fa-home fa-2x text-black-300"></i>
         </div>
     </div>
 </div>
