--- a/src/app/views/components/nbr-cars/nbr-cars.component.html
+++ b/src/app/views/components/nbr-cars/nbr-cars.component.html
@@ -6,7 +6,7 @@
             <div class="h5 mb-0 font-weight-bold text-gray-800">{{total}}</div>
         </div>
         <div class="col-auto">
-            <i class="fas fa-comments fa-2x text-gray-300"></i>
+            <i class="fas fa-car fa-2x text-black-300"></i>
         </div>
     </div>
 </div>
