--- a/src/app/views/components/nbr-unavailable-cars/nbr-unavailable-cars.component.html
+++ b/src/app/views/components/nbr-unavailable-cars/nbr-unavailable-cars.component.html
@@ -3,10 +3,10 @@
         <div class="col mr-2">
             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                 Voitures transférées</div>
-            <div class="h5 mb-0 font-weight-bold text-gray-800">{{nbrCars}}</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">{{transfers}}</div>
         </div>
         <div class="col-auto">
-            <i class="fas fa-car fa-2x text-gray-300"></i>
+            <i class="fas fa-exchange-alt fa-2x text-black-300"></i>
         </div>
     </div>
 </div>
